# home-assistant-blueprints

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  CLAUDE.md  README.md  blockheat_scenarios_with_graphs.xlsx  findings.md  hacs.json  memory.md  progress.md  pyproject.toml  solar_savings.yaml  task_plan.md
.github/workflows/: blockheat-mirror-sync.yml  quality.yml  release.yml  tests.yml
automations/: README.md  comfort_target.yaml  daikin_policy.yaml  dehumidifier.yaml  final_writer.yaml  helpers.yaml  policy.yaml  saving_target.yaml
blueprints/automation/blockheat/: block-heat.yaml  daikin-energy-saver.yaml  energy_saving_policy_bool.yaml
blueprints/automation/blockheat/core/: block-heat-target-comfort.yaml  block-heat.yaml
blueprints/automation/blockheat/policy/: energy_saving_policy_bool.yaml
custom_components/blockheat/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  engine.py  manifest.json  runtime.py  sensor.py  services.yaml  strings.json  validation.py
custom_components/blockheat/translations/: en.json
dashboards/blockheat/: block-heat-diagnostics-card.yaml  block-heat-diagnostics-native.yaml
docs/: Qvantum-ETK-Manual.md  blockheat-architecture.html  comfort-decision-tree.html  forecast-optimization-research.md  heating-system-report.md  home-architecture.md
docs/plans/: 2026-03-06-automatic-release-on-main.md  2026-03-08-blockheat-buffer-sensor-review.md
homeassistant/: card.yaml  configuration.yaml.packages-snippet.yaml  solar_savings.yaml
homeassistant/custom_components/blockheat/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  engine.py  manifest.json  runtime.py  sensor.py  services.yaml  strings.json  validation.py
homeassistant/custom_components/blockheat/translations/: en.json
scripts/: bump_version.py  check_component_mirror_sync.py  validate_release_version.py
skills/homeassistant-blockheat/: SKILL.md
skills/homeassistant-blockheat/agents/: openai.yaml
skills/homeassistant-blockheat/references/: repo-map.md
tests/: conftest.py  test_mirror_sync.py  test_release_version_validation.py  test_translation_coverage.py  test_validation_logic.py
tests/blockheat/: test_config_flow.py  test_diagnostics_entities.py  test_engine.py  test_engine_additional.py  test_engine_cop.py  test_entities.py  test_init.py  test_parity_suite.py  test_runtime.py  test_validation.py
