[project]
name = "blockheat"
version = "0.1.0"
description = "Blockheat Home Assistant integration and blueprints"
requires-python = ">=3.12"
dependencies = [
  "voluptuous>=0.15.2",
]

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["custom_components", "homeassistant", "tests"]

[tool.ruff.lint]
select = ["F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
files = ["custom_components/blockheat", "homeassistant/custom_components/blockheat"]
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
